--- a/index.html
+++ b/index.html
@@ -14,8 +14,13 @@
         <img src="image4.jpg" id="Image4" class="image">
         <img src="image5.jpg" id="Image5" class="image">
         <img src="image6.jpg" id="Image6" class="image">
+        <img src="image3.jpg" id="Image3" class="image">
+        <img src="image4.jpg" id="Image4" class="image">
+        <img src="image5.jpg" id="Image9" class="image">
         
-        <img src="image7.jpg" id="Image6" class="image">
     </div>
+   <div class="f">
+    <p>пэ</p>
+   </div>
 </body>
 </html>
